# memoryctl

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REQ.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.memctl/topics/: memctl-repo.md
.memoryctl/topics/: memoryctl-repo.md
apps/memctl-cli/: Cargo.toml
apps/memctl-cli/src/: main.rs
apps/memctl-cli/src/commands/: disable.rs  edit.rs  enable.rs  export.rs  forget.rs  init.rs  list.rs  mod.rs  move_cmd.rs  read.rs  save.rs  search.rs  util.rs  validate.rs
apps/memctl-cli/tests/: cli.rs
apps/memoryctl-cli/: Cargo.toml
apps/memoryctl-cli/src/: main.rs
apps/memoryctl-cli/src/commands/: disable.rs  edit.rs  enable.rs  export.rs  forget.rs  init.rs  list.rs  mod.rs  move_cmd.rs  read.rs  save.rs  search.rs  util.rs  validate.rs
apps/memoryctl-cli/tests/: cli.rs
crates/memctl-agent/: Cargo.toml
crates/memctl-agent/src/: lib.rs
crates/memctl-core/: Cargo.toml
crates/memctl-core/src/: lib.rs
crates/memctl-entry/: Cargo.toml
crates/memctl-entry/src/: lib.rs
crates/memctl-protocol/: Cargo.toml
crates/memctl-protocol/src/: lib.rs
crates/memctl-search/: Cargo.toml
crates/memctl-search/src/: lib.rs
crates/memctl-store/: Cargo.toml
crates/memctl-store/src/: lib.rs
crates/memctl-topic/: Cargo.toml
crates/memctl-topic/src/: lib.rs
crates/memoryctl-agent/: Cargo.toml
crates/memoryctl-agent/src/: lib.rs
crates/memoryctl-core/: Cargo.toml
crates/memoryctl-core/src/: lib.rs
crates/memoryctl-entry/: Cargo.toml
crates/memoryctl-entry/src/: lib.rs
crates/memoryctl-protocol/: Cargo.toml
crates/memoryctl-protocol/src/: lib.rs
crates/memoryctl-search/: Cargo.toml
crates/memoryctl-search/src/: lib.rs
crates/memoryctl-store/: Cargo.toml
crates/memoryctl-store/src/: lib.rs
crates/memoryctl-topic/: Cargo.toml
crates/memoryctl-topic/src/: lib.rs
