[workspace]
resolver = "2"
members = [
    "apps/memctl-cli",
    "crates/memctl-core",
    "crates/memctl-entry",
    "crates/memctl-topic",
    "crates/memctl-store",
    "crates/memctl-search",
    "crates/memctl-agent",
    "crates/memctl-protocol",
]

[workspace.package]
version      = "0.2.0"
edition      = "2021"
rust-version = "1.83"
license      = "Apache-2.0"
repository   = "https://github.com/agent-rt/memctl"
homepage     = "https://github.com/agent-rt/memctl"
authors      = ["Agent-RT contributors"]

[workspace.dependencies]
# 内部
memctl-core     = { path = "crates/memctl-core",     version = "0.2.0" }
memctl-entry    = { path = "crates/memctl-entry",    version = "0.2.0" }
memctl-topic    = { path = "crates/memctl-topic",    version = "0.2.0" }
memctl-store    = { path = "crates/memctl-store",    version = "0.2.0" }
memctl-search   = { path = "crates/memctl-search",   version = "0.2.0" }
memctl-agent    = { path = "crates/memctl-agent",    version = "0.2.0" }
memctl-protocol = { path = "crates/memctl-protocol", version = "0.2.0" }

# 外部
clap               = { version = "4.6",  features = ["derive"] }
serde              = { version = "1.0",  features = ["derive"] }
serde_json         = "1.0"
toml               = "1.1"
chrono             = { version = "0.4",  features = ["serde", "clock"] }
thiserror          = "2.0"
walkdir            = "2.5"
regex              = "1.12"
camino             = { version = "1.2",  features = ["serde1"] }
fs-err             = "3.3"
which              = "8.0"
dirs               = "6.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }

# dev
tempfile           = "3.27"
assert_cmd         = "2.2"
predicates         = "3.1"

[workspace.lints.rust]
unsafe_code             = "forbid"
unused_must_use         = "deny"

[workspace.lints.clippy]
unwrap_used   = "deny"
expect_used   = "deny"
panic         = "deny"
todo          = "warn"
dbg_macro     = "deny"
unimplemented = "warn"
pedantic      = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"

[profile.release]
lto             = "fat"
codegen-units   = 1
strip           = "symbols"
panic           = "abort"
opt-level       = "z"

[profile.dev]
debug = "line-tables-only"
