[package]
name         = "memctl-cli"
description  = "memctl: persistent agent memory layer CLI"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "memctl"
path = "src/main.rs"

[dependencies]
memctl-core     = { workspace = true }
memctl-entry    = { workspace = true }
memctl-topic    = { workspace = true }
memctl-store    = { workspace = true }
memctl-search   = { workspace = true }
memctl-agent    = { workspace = true }
memctl-protocol = { workspace = true }

clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
camino             = { workspace = true }
fs-err             = { workspace = true }
dirs               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
