[package]
name         = "memoryctl-cli"
description  = "memoryctl: persistent agent memory layer CLI"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "memoryctl"
path = "src/main.rs"

[dependencies]
memoryctl-core     = { workspace = true }
memoryctl-entry    = { workspace = true }
memoryctl-topic    = { workspace = true }
memoryctl-store    = { workspace = true }
memoryctl-search   = { workspace = true }
memoryctl-agent    = { workspace = true }
memoryctl-protocol = { workspace = true }

clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
camino             = { workspace = true }
fs-err             = { workspace = true }
dirs               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
