[package]
name         = "memctl-core"
description  = "memctl: shared types, error enum, Type / Scope primitives"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }
camino    = { workspace = true }

[lints]
workspace = true
