[package]
name         = "memctl-entry"
description  = "memctl: entry header parsing & writing (## ts [type=X source=...])"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
memctl-core = { workspace = true }
chrono         = { workspace = true }
serde          = { workspace = true }

[lints]
workspace = true
