[package]
name         = "memctl-store"
description  = "memctl: scope path resolution (global / project / agent)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
memctl-core  = { workspace = true }
memctl-entry = { workspace = true }
memctl-topic = { workspace = true }
camino          = { workspace = true }
fs-err          = { workspace = true }
dirs            = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
