[package]
name         = "memctl-topic"
description  = "memctl: topic file IO with append-only writes"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
memctl-core  = { workspace = true }
memctl-entry = { workspace = true }
camino          = { workspace = true }
fs-err          = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
