[package]
name         = "memoryctl-store"
description  = "memoryctl: scope path resolution (global / project / agent)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
memoryctl-core  = { workspace = true }
memoryctl-entry = { workspace = true }
memoryctl-topic = { workspace = true }
camino          = { workspace = true }
fs-err          = { workspace = true }
dirs            = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
